--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -148,6 +148,30 @@
         </tbody>
       </table>
     </div>
+
+    <div class="customer-info">
+      <table>
+        <thead>
+          <tr>
+            <td colspan="3">
+              QUẢN LÝ NHÂN SỰ
+            </td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Số lượng nhân sự</td>
+            <td>{{allOrders}}</td>
+            <td><a href="/admin/all-customers">Chi tiết</a></td>
+          </tr>
+          <tr>
+            <td>Bảng lương</td>
+            <td></td>
+            <td><a href="/admin/all-orders/?page=1&type=preparing">Chi tiết</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
