--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,6 +1,6 @@
 <div class="admin-sidebar-container">
   <div class="admin-account">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.jpg" />
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.jpg" alt="avatar"/>
     <div>
       <p>Xin chào Quỳnh Ly,</p>
       <p id="welcome-text"></p>
@@ -23,6 +23,10 @@
     <a href="/admin/all-stores" class="sidebar-button" id="stores">
       <i class="fi fi-rr-store-alt"></i>
       <p>Cửa hàng</p>
+    </a>
+    <a href="/admin/all-stores" class="sidebar-button" id="stores">
+      <i class="fi fi-rr-users"></i>
+      <p>Nhân sự</p>
     </a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products">
       <i class="fi fi-rr-box-open"></i>
