--- a/src/resource/views/users/newArrival.hbs
+++ b/src/resource/views/users/newArrival.hbs
@@ -13,8 +13,8 @@
     {{#each product}}
       <div class="product">
         <a href="{{this.img.path}}">
-          <img src="../uploads/{{this.avatar}}" alt="">
-          <p id="product-price">{{this.price}}đ</p>
+          <img src="../uploads/{{this.avatar}}" alt="{{this.name}}">
+          <p id="product-price">{{this.price}} VND</p>
           <p id="product-details">{{this.name}}</p>
         </a>
         
