--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,7 +1,6 @@
 <div class="sign-up-container">
   <div class="sign-up-form">
-    {{!-- <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg"> --}}
-    <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/352741714_563563145718603_9057471481482946263_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGw4AFoKHleOOuEAxVuso3bf56iaggbZh5_nqJqCBtmHooDsfJSxvBixX7VjZQ_IqDQIbvF0PUt7hV0NvSuZe9f&_nc_ohc=XhKZz5p9J4QQ7kNvgF3PZw3&_nc_ht=scontent.fhan2-5.fna&_nc_gid=ANpsniaTV251ycYZJOh57L3&oh=00_AYCvLACYAUWPfUZnKEgaZ9oQXaIcJZa9dqKPGGobZFKnng&oe=670F012D">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/4_lnwzuk_jkpls2.jpg" alt="signup_img">
     <div class="form-input">
       <p class="form-title">Đăng ký</p>
       <form id="form-2" method="post" action="/authentication/creating-account">
