--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -1,7 +1,7 @@
 <div class="user-update-profile-container">
     <div class="sidebar-menu">
       <div class="avatar">
-        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="">
+        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="{{userInfo.userInfo.name}}">
         <span>{{userInfo.userInfo.name}}</span>
       </div>
       <div class="tag">
@@ -215,7 +215,7 @@
             {{this.customerInfo.name}}
           </td>
           <td>
-            {{this.totalOrderPrice}}đ
+            {{this.totalOrderPrice}} VND
           </td>
           <td>
             {{this.createdAt}}
