--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -51,7 +51,7 @@
         td:first-child {
           /* border-top-left-radius: 10px;
           border-bottom-left-radius: 10px; */
-          border: 1px solid black;
+          border: 1px solid #D1A6A6;
           border-radius: 10px;
         }
 
