--- a/src/public/css/userProduct.css
+++ b/src/public/css/userProduct.css
@@ -67,6 +67,7 @@
       display: flex;
       flex-direction: column;
       justify-content: start;
+      gap: 5px;
 
       h1, h3, h4 {
         width: fit-content;
@@ -79,7 +80,7 @@
         color: #c73030;
       }
 
-      #product-price {
+      #product-price, #product-quantity {
         background-color: #FFDFDF;
         padding: 5px;
         width: fit-content;
@@ -152,13 +153,19 @@
     background-color: white;
     border-radius: 10px;
     align-items: center;
+    white-space: pre-line;
   
     h3 {
       padding: 5px;
+      margin-block-start: 0;
+      margin-block-end: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     p {
-      padding: 0px 10px;
+      padding: 0px 15px;
     }
   }
 
