--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -52,9 +52,9 @@
                 align-items: center
                 "
           >
-            <img src="{{this.img.path}}">
+            <img src="{{this.img.path}}" alt="{{this.name}}"> 
             <p>{{this.name}}</p>
-          </td>
+          </td>  
           <td style="width: 10%;">{{this.categories}}</td>
           <td style="width: 10%;">{{this.price}} đ</td>
           <td style="width: 10%;">
