--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -39,7 +39,7 @@
                 align-items: center
                 "
           >
-            <img src="{{this.img.path}}">
+            <img src="{{this.img.path}}" alt="{{this.name}}">
             <p>{{this.name}}</p>
           </td>
           <td style="width: 10%;">{{this.categories}}</td>
