--- a/src/resource/views/partials/userAdvertise.hbs
+++ b/src/resource/views/partials/userAdvertise.hbs
@@ -11,8 +11,8 @@
     <img src="https://cdn.mykiot.vn/2021/04/161724737338b95a8a2346880ad73e88fb6ff03e98.jpg" alt="loading">
   </div>
 
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
+  <p class="prev" onclick="plusSlides(-1)">❮</p>
+  <p class="next" onclick="plusSlides(1)">❯</p>
 </div>
 <br>
 <div style="text-align:center">
