--- a/src/resource/views/partials/userFooter.hbs
+++ b/src/resource/views/partials/userFooter.hbs
@@ -5,4 +5,36 @@
     <li>Based in HN</li>
     <li>Only authentic</li>
   </ul>
+
+  <p>
+    <b>Mỹ phẩm chính hãng, chất lượng đến từ Bunny House</b>
+    Chào mừng  điểm đến chăm sóc cơ thể, giúp bạn tự tin tỏa sáng mỗi ngày.
+
+    <ul>
+      <li>
+        Chăm sóc da: Chúng tôi cung cấp đầy đủ các sản phẩm chăm sóc da như sữa rửa mặt, kem dưỡng ẩm, serum đặc trị, mặt nạ dưỡng da... Từ các thương hiệu nổi tiếng như The Ordinary, Obagi, Paula’s Choice, Vaseline... Các sản phẩm đều được chọn lọc kỹ lưỡng nhằm mang lại hiệu quả tối ưu cho từng loại da, từ da dầu, da khô đến da nhạy cảm.
+      </li>
+      <li>
+        Trang điểm: Bên cạnh sản phẩm dưỡng da, trang web của chúng tôi còn có các sản phẩm trang điểm hàng đầu như son môi, phấn phủ, kem nền, mascara từ các thương hiệu uy tín như Maybelline, 3CE, Apieu giúp bạn sở hữu lớp trang điểm tự nhiên, lâu trôi. 
+      </li>
+      <li>
+        Chăm sóc cơ thể: Các sản phẩm dưỡng thể từ thương hiệu Vaseline, Dove cung cấp độ ẩm cần thiết, giúp làn da mềm mại và mịn màng. Đặc biệt, các dòng dưỡng thể có chứa SPF giúp bảo vệ da trước tác động của ánh nắng mặt trời.
+      </li>
+    </ul>
+    
+    <b>Cam kết chất lượng và chính sách ưu đãi</b>
+    Chúng tôi cam kết 100% sản phẩm mỹ phẩm tại Bunny House đều là hàng chính hãng, có nguồn gốc rõ ràng và chất lượng đảm bảo. Bên cạnh đó, chúng tôi cung cấp nhiều chương trình khuyến mãi, flash sale hấp dẫn mỗi tuần cùng chính sách giao hàng nhanh chóng và hỗ trợ đổi trả linh hoạt, mang đến trải nghiệm mua sắm trực tuyến tiện lợi nhất cho khách hàng.
+    Liên hệ với chúng tôi
+
+    <ul>
+      <li>Công ty [Tên công ty]</li>
+      <li>Địa chỉ: [Địa chỉ công ty]</li>
+      <li>Hotline: [Số điện thoại]</li>
+      <li>Email: [Email hỗ trợ]</li>
+      <li>Giờ làm việc: Thứ 2 - Thứ 7, từ 9:00 - 18:00</li>
+    </ul>
+    
+    Kết nối với chúng tôi qua mạng xã hội như Facebook, Instagram, Zalo, và TikTok để cập nhật nhanh chóng những sản phẩm mới, xu hướng làm đẹp và các ưu đãi độc quyền.
+    <b>Bunny House - Đồng hành cùng vẻ đẹp tự nhiên của bạn!</b> 
+  </p>
 </div>
