--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -10,11 +10,14 @@
   <div class="all-category-makeup">
   </div>
 
-  <select class="sort">
-    <option value="">Sắp xếp theo</option>
-    <option value="asc">Giá tăng dần</option>
-    <option value="desc">Giá giảm dần</option>
-  </select>
+  <div class="filter">
+    <select class="filter-btn">
+      <option value="">Sắp xếp theo</option>
+      <option value="asc">Giá tăng dần</option>
+      <option value="desc">Giá giảm dần</option>
+    </select>
+  </div>
+  
 
   <div class="all-products">
     {{#each newProduct}}
