--- a/src/public/css/adminAllCustomers.css
+++ b/src/public/css/adminAllCustomers.css
@@ -4,12 +4,10 @@
     align-items: center;
     justify-content: space-between;
   }
-
   .filter {
     background-color: #FFDFDF;
     padding: 5px;
   }
-
   .create-customer {
     display: flex;
     align-items: center;
@@ -26,14 +24,12 @@
       margin-block-end: 0;
     }
   }
-
   .board-title {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100px;
-
     p {
       font-size: 30px;
       text-transform: uppercase;
@@ -42,16 +38,13 @@
       padding: 20px;
     }
   }
-
   .table {
     overflow-x: auto;
     padding: 10px 0;
   }
-
   table, td {
     text-align: center;
   }
-
   table {
     width: 100%;
     border-spacing: 0px 10px;
@@ -59,67 +52,53 @@
     background-color: #F0F0F0;
     border-radius: 10px;
   }
-
   thead {
     background-color:#D1A6A6;
     height: 50px;
     a { text-decoration: none }
     i { color: black }
-
     td:first-child {
       border-top-left-radius: 10px;
       border-bottom-left-radius: 10px;
-
     }
     td:last-child {
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
     }
   }
-
   tbody {
     tr {
       background-color: white;
       height: 50px;
-  
       td:first-child {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
       }
-
       td:nth-child(3) {
         text-align: left;
         gap: 5px;
-
         p {
           overflow: hidden;
           display: -webkit-box;
-          -webkit-line-clamp: 2; /* number of lines to show */
-                  /* line-clamp: 2;  */
+          -webkit-line-clamp: 2;
           -webkit-box-orient: vertical;
         }
       }
-
       td:last-child {
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
       }
-
       a { text-decoration: none; color: black; font-weight: bold; }
     }
-  
     tr:hover {
       filter: brightness(80%);
     }
-
     img {
       border-radius: 10px;
       width: 40px;
       aspect-ratio: 1/1;
     }
   }
-
-  /* Set a style for all buttons */
   button {
     width: fit-content; 
     height: 30px;
@@ -129,70 +108,53 @@
     border-radius: 5px;
     cursor: pointer;
   };
-
-  
   button:hover {
     filter: brightness(80%);
   }
-
-  /* Add a color to the cancel button */
   .cancelbtn {
     background-color: #ccc;
     color: black;
     width: 25%;
   }
-
-  /* Add a color to the delete button */
   .deletebtn {
     background-color: #f44336;
     color: black;
     width: 25%;
   }
-
-  /* Add padding and center-align text to the container */
   .container {
     padding: 16px;
     text-align: center;
   }
-
-  /* The Modal (background) */
   .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 2; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 2;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
     background-color: rgba(0, 0, 0, 0.4);
   }
-
-  /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
-    border-radius: 5px;
+    width: 50%; 
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%)
   }
-
-  /* Clear floats */
   .clearfix::after {
     content: "";
     clear: both;
     display: table;
   }
-
   .pagination {
     display: flex; 
     align-items: center; 
     justify-content: center; 
     gap: 10px;
-  
     a {
       display: flex;
       align-items: center;
@@ -205,26 +167,21 @@
     }
   }    
 }
-
 @media screen and (max-width: 700px) {
   .admin-all-products-container { 
     .board-title {
       p { font-size: 25px;}
     }
-
     tbody, thead {
       td:nth-child(1) { display: none;}
       td:nth-child(2) { display: none;}
-      
       td:nth-child(3) {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
       }
-
       td:nth-child(4) { display: none;}
       td:nth-child(5) { display: none;}
     }
-
     .modal-content {
       width: 80% !important;
     }
