--- a/src/public/css/userFooter.css
+++ b/src/public/css/userFooter.css
@@ -1,5 +1,9 @@
 .footer-container {
-  height: 150px;
+  /* height: ; */
   background-color: #D1A6A6;
   padding: 10px;
+
+  p {
+    white-space: pre-line;
+  }
 }
