--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -37,8 +37,9 @@
         </div>
 
         <div class="sign-up">
-          <p>Bạn chưa có tài khoản sao</p>
+          <p>Bạn chưa có tài khoản sao ?</p>
           <a href="/authentication/sign-up"><p style="color: red; text-decoration:underline">Đăng kí ngay thôi</p></a>
+          <a href="/home"><p style="color: red; text-decoration:underline">Tiếp tục Shopping</p></a>
         </div>
       </form>
     </div>
