--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -36,6 +36,7 @@
         <div class="sign-in">
           <p>Đã có tài khoản ? </p>
           <a href="/authentication/sign-in"><p style="color: red; text-decoration:underline">Đăng nhập ngay thôi</p></a>
+          <a href="/home"><p style="color: red; text-decoration:underline">Tiếp tục Shopping</p></a>
         </div>
       </form>
     </div>
