--- a/src/public/css/userAllOrders.css
+++ b/src/public/css/userAllOrders.css
@@ -2,13 +2,11 @@
   form {
     padding-top: 10px;
   }
-  
   .cart, .contact-info, .payment-method {
     background-color: white;
     margin-top: 10px;
     border-radius: 5px;
     padding: 10px;
-
     p {
       background-color: #F0F0F0;
       height: fit-content;
@@ -22,45 +20,36 @@
       border-radius: 5px;
     }
   }
-
   .cart {
     table, thead, td, tfoot {
       text-align: center;
     }
-
     table {
       width: 100%;
       border-spacing: 0px 10px;
       padding: 0px 10px;
-  
       thead, tfoot {
         background-color: #D1A6A6;
         height: 50px;
         font-weight: bolder;
       }
-
       tbody {
         td {
           height: 100px;
           border-bottom: 1px solid black;
           padding: 5px;
         }
-
         td:nth-child(2) {
           text-align: start;
         }
-
         .delete-button {
           cursor: pointer;
         }
       }
-
       img {
-        /* border-radius: 50%; */
         width: 75px;
         aspect-ratio: 1/1;
       }
-
       a { 
         text-decoration: none; 
         color: black;
@@ -68,12 +57,10 @@
       }
     }
   }
-
   .contact-info {
     .info {
       display: grid;
       grid-template-columns: auto auto;
-
       .form-group {
         width: 80%;
         padding: 10px;
@@ -81,12 +68,10 @@
         flex-direction: column;
         gap: 5px;
       }
-
       label {
         font-weight: bolder;
         text-transform: capitalize;
       }
-    
       input {
         width: 100%;
         height: 40px;
@@ -96,18 +81,15 @@
       }
     }
   }
-
   .payment-method {
     .form-group {
       padding: 10px;
       gap: 5px;
     }
-
     label {
       font-weight: bolder;
       text-transform: capitalize;
     }
-
     .bank-account {
       width: 100%;
       background-color: #FFDFDF;
@@ -115,34 +97,28 @@
       padding: 5px;
       display: flex;
       justify-content: start;
-
       .bank-info {
         display: flex;
         flex-direction: column;
         align-items: start;
         justify-content: center;
       }
-
       img {
         width: 200px;
       }
     }
-    
     .bank-account {
       display: none;
     }
-
     input[value="transfer"]:checked ~ .bank-account {
       display: flex;
     }
   }
-
   .button {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 10px;
-
     button {
       width: 150px; 
       height: 30px;
@@ -152,7 +128,6 @@
       border-radius: 5px;
       cursor: pointer;
     };
-  
     button:hover {
       background-color: #D1A6A6;
       color: white;
@@ -160,7 +135,6 @@
     }
   }
 }
-
 .order-successfully-message {
   position: fixed;
   top: 50%;
@@ -179,19 +153,16 @@
   padding: 5px;
   gap: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
   i {
     color: #D1A6A6;
     font-size: 50px;
   }
-  
   h5 {
     text-align: center;
     font-style: italic;
     margin-block-start: 0;
     margin-block-end: 0;
   }
-
   button {
     width: max-content; 
     height: fit-content;
@@ -202,22 +173,18 @@
     cursor: pointer;
   };
 }
-
 @media screen and (max-width: 700px) {
   table {
     a {
       overflow: hidden;
       display: -webkit-box;
-      -webkit-line-clamp: 2; /* number of lines to show */
-              /* line-clamp: 2;  */
+      -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
     }
   }
-
   table tr td:nth-child(2) {
     width: 20% !important;
   }
-
   .contact-info .info{
     grid-template-columns: auto !important
   }
