--- a/src/public/css/userProduct.css
+++ b/src/public/css/userProduct.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   padding: 10px 0;
   gap: 10px;
-
   .table {
     width: 90%;
     height: fit-content ;
@@ -16,20 +15,17 @@
     display: flex;
     align-items: center;
   }
-
   .image-box {
     display: flex;
     align-items: center;
     width: 50%;
     height: 100%;
-
     .thumbnails {
       border-radius: 5px;
       width: 50px;
       height: 90%;
       margin-left: 10px;
       display: grid;
-  
       img {
         max-width: 100%;
         aspect-ratio: 1/1;
@@ -37,18 +33,15 @@
         cursor: pointer;
         border: 1px solid white;
       }
-
       img:hover {
         border: 1px solid red;
       }
     }
-  
     .image {
       border-radius: 5px;
       width: 400px;
       aspect-ratio: 1/1;
       margin-left: 20px;
-  
       img {
         max-width: 100%;
         aspect-ratio: 1/1;
@@ -56,30 +49,25 @@
       }
     }
   }
-
   .details-box {
     width: 50%;
     height: 100%;
     margin: 10px;
-
     .title {
       width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: start;
       gap: 5px;
-
       h1, h3, h4 {
         width: fit-content;
         margin-block-start: 0;
         margin-block-end: 0;
         padding: 5px 0;
       }
-
       h1 {
         color: #c73030;
       }
-
       #product-price, #product-quantity {
         background-color: #FFDFDF;
         padding: 5px;
@@ -88,7 +76,6 @@
         font-weight: bolder;
       }
     }
-
     .description {
       width: 100%;
       height: 40%;
@@ -96,7 +83,6 @@
       overflow: hidden;
       word-wrap: break-word;
     }
-
     .quantity {
       display: flex;
       align-items: center;
@@ -113,14 +99,11 @@
       };
       i { cursor: pointer }
     }
-
     .button {
       display: flex;
       align-items: center;
       gap: 5px;
-
       a { text-decoration: none;}
-        
       .add-to-cart, .buy-now, .out-of-order {
         display: flex;
         align-items: center;
@@ -130,31 +113,26 @@
         border-radius: 5px;
         padding: 10px;
       };
-
       .add-to-cart, .buy-now {
         border: 1px solid #D1A6A6;
         p, a { color: #D1A6A6; text-decoration: none }
       }
-
       .out-of-order {
         display: none;
         background-color: red;
         color: white;
       }
-
       div:hover {
         cursor: pointer;
       }
     }
   }
-
   .more-details {
     width: 90%;
     background-color: white;
     border-radius: 10px;
     align-items: center;
     white-space: pre-line;
-  
     h3 {
       padding: 5px;
       margin-block-start: 0;
@@ -163,33 +141,28 @@
       align-items: center;
       justify-content: center;
     }
-
     p {
       padding: 0px 15px;
     }
   }
-
   .related-products {
     width: 100%;
     overflow: hidden;
     padding-top: 20px;
-
+    max-width: 1300px;
     .title {
       display: flex; 
       align-items: center; 
       justify-content: center;
       gap: 5px; 
       font-size: 25px;
-  
       i { color: red;}
-    
       .main-title {
         display: inline-block;
         position: relative;
         color: red;
         text-decoration: none;
       }
-      
       .main-title::after {
         content: '';
         position: absolute;
@@ -202,13 +175,11 @@
         transform-origin: bottom right;
         transition: transform 0.25s ease-out;
       }
-      
       .main-title:hover::after {
         transform: scaleX(1);
         transform-origin: bottom left;
       }
     }
-
     .products {
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
@@ -223,26 +194,21 @@
       display: grid;
       grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
       scroll-snap-type: x mandatory;
-      
       img { max-width: 100%; aspect-ratio: 1 / 1 };
-    
       a, p { text-decoration: none; color: black};
-      
       .product {
         background-color: white; 
         max-width: 220px;
         padding: 5px 12px;
         scroll-snap-align: none start;
         border-radius: 10px;
-
         #product-price {
           background-color: #FFDFDF;
           padding: 5px;
           width: fit-content;
           border-radius: 5px;
           font-weight: bolder;
-        }
-        
+        }    
         #product-details {
           display: flex; 
           height: 50px; 
@@ -252,7 +218,6 @@
           font-size: 14px;
         }
       };
-      
       .product:hover {
         border: 1.5px solid red;
         border-radius: 10px;
@@ -262,41 +227,32 @@
       }
     }
   }
-  
   .products::-webkit-scrollbar {
     display: none;
   }
 }
-
 @media screen and (max-width: 700px) {
   .table {
     flex-direction: column;
-
     .image-box {
       width: 90% !important;
-
       .image {
         margin-left: 0;
         margin-top: 10px
       }
     }
-
     .details-box {
       width: 90% !important;
-
       h1 {
         font-size: 25px !important;
       }
-
       h3 {
         font-size: 20px !important;
       }
-
       .quantity {
         width: 100% !important;
         justify-content: center !important;
       }
-
       .button > div {
         width: 50% !important
       }
