--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -7,6 +7,7 @@
   <div class="all-brands">
     {{#each brand}}
       <div class="brand">
+        <img src="{{this.img.path}}" alt="{{this.name}}"/>
         <a href="/all-products/all-brands/{{this}}">
           {{this}}
         </a>
