--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
+  <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo"/>
+  <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng, đa dạng các sản phẩm chăm sóc da và trang điểm từ các thương hiệu uy tín. Hãy khám phá bí quyết làm đẹp cùng Buny Store thôi nàooo!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/image_fdrqpl.png" />
   <link rel="stylesheet" href="/css/userAdvertise.css">
   <link rel="stylesheet" href="/css/userAllBrands.css">
