--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -2,7 +2,7 @@
   <div class="admin-account">
     <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.jpg" alt="avatar"/>
     <div>
-      <p>Xin chào Quỳnh Ly,</p>
+      <p>Xin chào Nam Vũ,</p>
       <p id="welcome-text"></p>
     </div>
   </div>
