--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -60,7 +60,7 @@
                             <i class="fi fi-ss-check-circle"></i> --}}
                             {{order.status}}
                         </td>
-                        <td><a href="/order/{{order._id}}">Chi Tiết</td>
+                        <td><a href="/all-orders/{{order._id}}">Chi Tiết</td>
                     </tr>
                 </tbody>
             </table>            
