--- a/src/public/css/userAllBrands.css
+++ b/src/public/css/userAllBrands.css
@@ -1,6 +1,7 @@
 .user-all-brands-container {
   width: 100%;
   overflow: hidden;
+
   .title {
     display: flex; 
     align-items: center; 
@@ -36,7 +37,7 @@
     gap: 10px;
     padding: 15px;
     display: grid;
-    grid-template-columns: repeat(3, minmax(min(11.25rem, 100%), 1fr));
+    grid-template-columns: repeat(4, minmax(min(11.25rem, 100%), 1fr));
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     overflow-x: scroll;
@@ -44,21 +45,26 @@
     scrollbar-width: none;  /* Firefox */
   }
   .brand {
-    width: 100%;
+    width: 90%;
     background-color: white;
     border-radius: 5px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: space;
+    justify-content: space-around;
     height: 100px;
-  }
-  a {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none; 
-    color: black;
+    padding: 10px;
+    img {
+      max-width: 100px;
+      aspect-ratio: 1/1;
+    }
+    a {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none; 
+      color: black;
+    }
   }
 }
