--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -8,6 +8,14 @@
     
     <div class="details-box">
       <div class="title">
+        <h4 id="product-rate">
+          {{newProduct.rate}}/5
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+        </h4>
         <h3>{{newProduct.brand}}</h3>
         <h1>{{newProduct.name}}</h1>
         <h4 id="product-old-price"><del>{{newProduct.oldPrice}} VND</del></h4>
