--- a/src/public/css/userAllBrands.css
+++ b/src/public/css/userAllBrands.css
@@ -62,7 +62,7 @@
       width: 100%;
       height: 100%;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
       text-decoration: none; 
       color: black;
     }
