--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -26,6 +26,14 @@
         <p id="product-old-price"><del>{{this.oldPrice}} VND</del></p>
         <p id="product-price">{{this.price}} VND</p>
         <p id="product-details">{{this.name}}</p>
+        <p id="product-rate">
+          {{this.rate}}/5
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+        </p>
       </div>
     </a>
     {{/each}}
